--- a/applications/areg-portal/frontend/src/index.ejs
+++ b/applications/areg-portal/frontend/src/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="https://use.typekit.net/sxc1glc.css" />
     <meta charset="UTF-8" />
-    <title>areg-portal</title>
+    <title>Antibody Registry</title>
   </head>
   <body>
     <div id="root"></div>
