--- a/applications/portal/api/templates/main.jinja2
+++ b/applications/portal/api/templates/main.jinja2
@@ -20,6 +20,8 @@ apps.populate(settings.INSTALLED_APPS)
 # migrate the Django models
 os.system("python manage.py migrate")
 
+from cloudharness.auth import decode_token
+
 from api.controllers import *
 
 app = FastAPI(
@@ -49,23 +51,34 @@ app.add_middleware(
     allow_headers=["*"],
 )
 
-from cloudharness.middleware import set_authentication_token
+from cloudharness.middleware import set_authentication_token, get_authentication_token
+
 @app.middleware("http")
 async def add_process_time_header(request: Request, call_next):
     # retrieve the bearer token from the header
     # and save it for use in the AuthClient
-    authorization = request.headers.get('Authorization')
+    authorization = request.headers.get('Authorization') or request.cookies.get('kc-access')
     if authorization:
+        if "Bearer" in authorization:
+            authorization = authorization.split("Bearer ")[1]
         set_authentication_token(authorization)
-
     return await call_next(request)
 
 if os.environ.get('KUBERNETES_SERVICE_HOST', None):
     # init the auth service when running in/for k8s
-    from cloudharness_django.services import init_services, get_auth_service
-    init_services()
-    # start the kafka event listener when running in/for k8s
-    import cloudharness_django.services.events
+    from cloudharness_django.services import get_auth_service, init_services
+    async def init():
+        import asyncio
+        try:
+            init_services()
+            # start the kafka event listener when running in/for k8s
+            import cloudharness_django.services.events
+        except:
+            from cloudharness import log
+            log.warn("Accounts not available -- user syncronization for backoffice not available. Waiting 30 seconds...")
+            await asyncio.sleep(30)
+            init()
+    init()
 
 # enable the Bearer Authentication
 security = HTTPBearer()
@@ -76,14 +89,15 @@ async def has_access(credentials: HTTPBasicCredentials = Depends(security)):
     """
     if not os.environ.get('KUBERNETES_SERVICE_HOST', None):
         return {}
-    token = credentials.credentials
+    token = get_authentication_token()
 
     try:
-        payload = get_auth_service().get_auth_client().decode_token(token)
+        payload = decode_token(token)
     except Exception as e:  # catches any exception
         raise HTTPException(
             status_code=401,
         )
+    
 
 PROTECTED = [Depends(has_access)]
 
