--- a/applications/portal/api/templates/main.jinja2
+++ b/applications/portal/api/templates/main.jinja2
@@ -3,7 +3,7 @@ from __future__ import annotations
 import os
 
 from fastapi import APIRouter, Depends, FastAPI, HTTPException, Request
-from fastapi.security import HTTPBearer, HTTPBasicCredentials
+from fastapi.security import APIKeyCookie, HTTPBasicCredentials
 
 from django.conf import settings
 from django.apps import apps
@@ -81,7 +81,7 @@ if os.environ.get('KUBERNETES_SERVICE_HOST', None):
     init()
 
 # enable the Bearer Authentication
-security = HTTPBearer()
+security = APIKeyCookie(name="kc-access")
 
 async def has_access(credentials: HTTPBasicCredentials = Depends(security)):
     """
