--- a/applications/portal/api/templates/main.jinja2
+++ b/applications/portal/api/templates/main.jinja2
@@ -3,7 +3,7 @@ from __future__ import annotations
 import os
 
 from fastapi import APIRouter, Depends, FastAPI, HTTPException, Request
-from fastapi.security import APIKeyCookie, HTTPBasicCredentials
+from fastapi.security import APIKeyCookie, HTTPBasicCredentials, HTTPBearer
 
 from django.conf import settings
 from django.apps import apps
@@ -75,7 +75,8 @@ if os.environ.get('KUBERNETES_SERVICE_HOST', None):
 
 
 # enable the Bearer Authentication
-security = APIKeyCookie(name="kc-access")
+#security = APIKeyCookie(name="kc-access") # This works but having issues with dev server
+security = HTTPBearer()
 
 async def has_access(credentials: HTTPBasicCredentials = Depends(security)):
     """
