BO table css fix

--- a/applications/portal/backend/static/admin/css/base.css
+++ b/applications/portal/backend/static/admin/css/base.css
@@ -316,6 +316,9 @@ td, th {
     border-bottom: 1px solid var(--hairline-color);
     vertical-align: top;
     padding: 8px;
+    max-width: 5em;
+    overflow: hidden;
+    word-wrap: break-word;
 }
 
 th {
