--- a/applications/portal/api/templates/main.jinja2
+++ b/applications/portal/api/templates/main.jinja2
@@ -146,8 +146,6 @@ app.mount("/", get_asgi_application())
 #    import uvicorn
 #    uvicorn.run(app, host="0.0.0.0", port=8000)
 
-try:
-    import cloudharness.sentry as sentry
-    sentry.init(appname="portal", traces_sample_rate=1.0)
-except:
-    log.exception("Sentry initialization failed")
+from api.helpers import init_sentry
+
+init_sentry()
