AREG-53 feature: basic seo, keywords, sitemap

--- a/applications/portal/frontend/src/index.ejs
+++ b/applications/portal/frontend/src/index.ejs
@@ -25,6 +25,8 @@
     
     <link rel="stylesheet" href="https://use.typekit.net/sxc1glc.css" />
     <meta charset="UTF-8" />
+    <meta name="description" content="Antibodies: Search, Submit and Trace | Researchers only">
+    <meta name="keywords" content="Antibodies, Antibody Registry, Antibody Research">
     <title>Antibody Registry</title>
   </head>
   <body>
