Add cookie auth to apis

--- a/applications/portal/api/templates/main.jinja2
+++ b/applications/portal/api/templates/main.jinja2
@@ -92,10 +92,10 @@ if os.environ.get('KUBERNETES_SERVICE_HOST', None):
 
 
 # enable the Bearer Authentication
-#security = APIKeyCookie(name="kc-access") # This works but having issues with dev server
-security = HTTPBearer()
+# security = APIKeyCookie(name="kc-access") # This works but having issues with dev server
+# security = HTTPBearer()
 
-async def has_access(credentials: HTTPBasicCredentials = Depends(security)):
+async def has_access():
     """
     Function that is used to validate the token in the case that it requires it
     """
