--- a/applications/accounts/themes/custom/login/resources/css/login.css
+++ b/applications/accounts/themes/custom/login/resources/css/login.css
@@ -33,6 +33,7 @@
     padding: 0 12px;
     line-height: 24px;
     color: #344054;
+    width: 100%;
 }
 
 textarea.pf-c-form-control {
@@ -580,6 +581,7 @@ ul#kc-totp-supported-apps {
 #kc-form-buttons{
   position: relative;
   margin-top: 24px;
+  margin-bottom: 24px !important;
 }
 
 #kc-form-buttons input {
@@ -595,6 +597,8 @@ ul#kc-totp-supported-apps {
   font-size: 16px;
   line-height: 24px;
   color: #FFFFFF;
+  border: 0;
+  width: 100%;
 }
 
 #kc-form-buttons .login-icon {
